# wolt_scraper

./: .gitignore  README.md  main.py  pyproject.toml
woltscrape/wolt/: client.py  type.py
