[tool.poetry]
name = "wolt_scraper"
version = "0.1.0"
description = ""
authors = ["ThaRising <kochbe.ber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
pyppeteer = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
